-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.1, Lustre 2.15.3
-
None
-
RHEL 9.0 client
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/3a8eb542-e2e6-4223-8a43-3f37b87a4636
test_101j failed with the following error:
== sanity test 101j: A complete read block should be submitted when no RA ========================================================== 19:37:12 (1657913832) Disable read-ahead 16+0 records in 16+0 records out 16777216 bytes (17 MB, 16 MiB) copied, 0.0565881 s, 296 MB/s Reset readahead stats 4096+0 records in 4096+0 records out 16777216 bytes (17 MB, 16 MiB) copied, 1.08708 s, 15.4 MB/s snapshot_time 3868.949651534 secs.nsecs start_time 0.000000000 secs.nsecs elapsed_time 3868.949651534 secs.nsecs failed_to_fast_read 8192 samples [pages] sanity test_101j: @@@@@@ FAIL: expected 4096 got 8192
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_101j - expected 4096 got 8192